# mywork

./: .dockerignore  .gitignore  .trivyignore  CLAUDE.md  Dockerfile  README.md  dev-lan.sh  dictionary-index.json  单词背诵表.md  单词记忆辅助系统 - 词库增强与自定义复习补充设计.md  单词记忆辅助系统 - 阶段一详细设计文档.md  单词记忆辅助系统 - 阶段三详细设计文档.md  单词记忆辅助系统 - 阶段二详细设计文档.md  单词记忆辅助系统 - 阶段五详细设计文档.md  单词记忆辅助系统 - 阶段四详细设计文档.md  单词记忆辅助系统.md
backend/: README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/api/: api_clients.py  auth.py  health.py  practice.py  reviews.py  system.py  users.py  words.py
backend/app/core/: audit.py  auth.py  config.py  database.py  errors.py  responses.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  contracts.py
backend/app/services/: ai_enrich.py  audio_worker.py  dictionary.py  domain.py  idempotency.py  recitation.py  reviews.py  serializers.py  sessions.py  strategy.py  tts.py  words.py
backend/contracts/: openapi.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_session_title_note.py  0003_web_credentials.py  0004_word_audio.py
backend/scripts/: backup_sqlite.py  create_api_client.py  export_openapi.py  list_api_clients.py  rebuild_dictionary_meanings.py  rebuild_stats.py  revoke_api_client.py  rotate_api_token.py  set_api_client_scopes.py  set_web_password.py  shorten_word_meanings.py
backend/tests/: conftest.py  test_add_words_skill.py  test_ai_enrich.py  test_api_clients_admin.py  test_config.py  test_dictionary.py  test_domain.py  test_operations.py  test_practice_auth.py  test_recitation.py  test_system_backup.py  test_system_restore.py  test_today_reviews.py  test_users_admin.py  test_web_login.py  test_word_audio.py  test_word_reset.py  test_words_import.py  test_words_reviews.py
deploy/: README.md  portainer-stack.template.yml  portainer-stack.yml
frontend/: README.md  index.html  package.json  (+5 more)
(+85 files in other folders)
