[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "word-memory-backend"
version = "0.1.0"
description = "Word memory assistant backend"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi>=0.139,<0.140",
  "sqlalchemy>=2.0.51,<2.1",
  "pydantic>=2.12,<3",
  "alembic>=1.18,<1.19",
  "uvicorn>=0.51,<0.52",
  "argon2-cffi>=25.1,<26",
  "python-multipart>=0.0.32,<0.1",
  "httpx>=0.28.1,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=9.1,<9.2",
]
pdf = [
  "markdown>=3.7,<4",
  "weasyprint>=62,<66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

